# rust-axum-rest-basic

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/routes/: always_error.rs  always_success.rs  hello_world.rs  middleware_message.rs  middleware_read_custom_header.rs  mirror_body_json.rs  mirror_custom_header.rs  mirror_path_variable.rs  mirror_query_params.rs  mod.rs  respond_json_data.rs  set_middleware_custom_header.rs  validate_income_data.rs
