[package]
name = "axum-rest-basic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# cargo watch mode
# cargo watch -x run

# add dependencies using cargo command
# cargo add axum

# add dependencies within feature using cargo command
# cargo add tokio -F macros -F rt-multi-thread

# add full feature
# cargo add tokio -F full


[dependencies]
axum = { version = "0.6.20", features = ["headers"] }
serde = { version = "1.0.189", features = ["derive"] }
tokio = { version = "1.33.0", features = ["macros", "rt-multi-thread"] }
